<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--TODO possibly change this to 2 tabs one for ingredients one for steps also change image-->
    <TextView
        android:id="@+id/master_list_ingredients_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"
        android:text="@string/ingredients"
        android:textSize="@dimen/medium_heading" />

    <TextView
        android:id="@+id/master_list_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"
        android:lineSpacingExtra="6sp"
        android:textSize="@dimen/larger_text_size"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/master_list_step_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>